test/1.2/errors/T_EASSIGN_13.dml
/*
  © 2021-2024 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device eassign;

// bug 5090
method init {
    local bool b;
    /// ERROR EASSIGN
    b && true = true;
}
